erDiagram
    users {
        serial id PK
        varchar employee_id UK
        varchar email UK
        varchar keycloak_sub
        varchar first_name
        varchar last_name
        boolean email_verified
        user_role role
        varchar department
        varchar position
        varchar hourly_rate
        varchar bank_name
        varchar account_number
        varchar company_name
        date hire_date
        integer manager_id FK
        timestamp created_at
    }
    tbl_employee_pii {
        serial id PK
        varchar employee_id UK,FK
        bytea passport_number
        bytea national_id
        bytea address
        bytea emergency_contact_name
        bytea emergency_contact_phone
    }
    user_permissions {
        serial id PK
        integer user_id FK
        varchar permission_key
        access_level access_level
        integer assigned_by FK
    }
    leave_types {
        serial id PK
        varchar name
        integer max_days
        boolean is_active
    }
    employee_leave_balance {
        serial id PK
        integer user_id FK
        integer leave_type_id FK
        decimal total_days
        decimal used_days
        decimal remaining_days
        integer year
    }
    leave_requests {
        serial id PK
        integer user_id FK
        integer leave_type_id FK
        date start_date
        date end_date
        decimal total_days
        boolean is_half_day
        half_day_period half_day_period
        leave_status status
        timestamp team_leader_approval_date
        timestamp hr_approval_date
    }
    leave_calendar {
        serial id PK
        date date UK
        varchar name
        boolean is_recurring
        integer year
        integer created_by FK
    }
    salary_components {
        serial id PK
        varchar name
        component_type type
        boolean is_default
        boolean is_active
    }
    employee_salary_structure {
        serial id PK
        integer user_id FK
        integer component_id FK
        varchar amount
        boolean is_percentage
        date effective_date
        date end_date
    }
    monthly_salaries {
        serial id PK
        integer user_id FK
        date month_year
        varchar basic_salary
        varchar total_earnings
        varchar total_deductions
        varchar net_salary
        salary_status status
        integer generated_by FK
        date paid_date
        varchar pdf_url
    }
    salary_slip_details {
        serial id PK
        integer salary_id FK
        integer component_id FK
        varchar amount
        component_type type
    }
    facilities {
        serial id PK
        varchar name
        facility_type type
        integer capacity
        boolean is_active
    }
    facility_bookings {
        serial id PK
        integer facility_id FK
        integer user_id FK
        timestamp start_time
        timestamp end_time
        booking_status status
    }
    medical_insurance_claims {
        serial id PK
        integer user_id FK
        claim_type type
        varchar quarter
        decimal amount
        claim_status status
        varchar supportive_document_url
        integer reviewed_by FK
        integer resubmission_of FK
    }
    consultant_work_submissions {
        serial id PK
        integer user_id FK
        varchar project
        varchar tech
        decimal total_hours
        varchar log_sheet_url
        submission_status status
        integer reviewed_by FK
        integer resubmission_of FK
    }
    vendors {
        serial id PK
        varchar email
        varchar company_name
        varchar contact_number
        varchar bank_name
        varchar account_number
        varchar service_type
    }
    payment_vouchers {
        serial id PK
        voucher_type voucher_type
        integer user_id FK
        integer vendor_id FK
        decimal amount
        text description
        varchar invoice_number
        date due_date
        voucher_status status
        integer reviewed_by FK
        date paid_date
        integer created_by FK
    }
    audit_logs {
        serial id PK
        integer user_id FK
        varchar action
        varchar table_name
        integer record_id
        json old_values
        json new_values
        varchar ip_address
    }

    users ||--o| users : "manages"
    users ||--o| tbl_employee_pii : "has PII"
    users ||--o{ user_permissions : "granted"
    users ||--o{ user_permissions : "assigns"
    users ||--o{ employee_leave_balance : "holds"
    leave_types ||--o{ employee_leave_balance : "typed"
    users ||--o{ leave_requests : "requests"
    leave_types ||--o{ leave_requests : "typed"
    users ||--o{ leave_calendar : "creates"
    users ||--o{ employee_salary_structure : "has"
    salary_components ||--o{ employee_salary_structure : "of"
    users ||--o{ monthly_salaries : "earns"
    users ||--o{ monthly_salaries : "generates"
    monthly_salaries ||--o{ salary_slip_details : "lines"
    salary_components ||--o{ salary_slip_details : "of"
    facilities ||--o{ facility_bookings : "booked"
    users ||--o{ facility_bookings : "books"
    users ||--o{ medical_insurance_claims : "submits"
    users ||--o{ medical_insurance_claims : "reviews"
    medical_insurance_claims ||--o| medical_insurance_claims : "resubmit"
    users ||--o{ consultant_work_submissions : "submits"
    users ||--o{ consultant_work_submissions : "reviews"
    consultant_work_submissions ||--o| consultant_work_submissions : "resubmit"
    users ||--o{ payment_vouchers : "beneficiary"
    vendors ||--o{ payment_vouchers : "beneficiary"
    users ||--o{ payment_vouchers : "reviews"
    users ||--o{ payment_vouchers : "creates"
    users ||--o{ audit_logs : "acts"
